@@ -20,6 +20,7 @@ SVN trunk (1.1.1+svn):
    * Send message on player ban or kick
    * Show a message when a player leaves a game.
    * WML-generated units with "random_traits" now show the traits description
+   * flags on village don't "flicker" at the end of their animations
  * graphics
    * new attack icons: animal fangs, axe, battle axe, faery touch, fireball, hammer, hatchet, lightbeam, magic missile, necromatic staff, magic staff, spear
 
